--- a/css/style.css
+++ b/css/style.css
@@ -19,11 +19,14 @@ h2{
   text-align:center;
   padding: center;
   }
+/********* Descripbing Header text align margins and style **********/
 h1 {
   text-align: center;
   margin-top: 5%;
   margin-bottom: 5%; 
 }
+/********* Section text/background align margins padding and style **********/
+  
 .section {  
   clear: margin;
   position: relative;
@@ -46,26 +49,26 @@ h1 {
   color: white;  
 }
 .sushi{
-  background-color:#993366;
-  color: white;   
+   background-color:#993366;
+   color: white;   
 }
 @media (min-width: 992px) {  
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
     margin: auto;    
- }
-.col-lg-1 {
-  width: 8.33%;
-}
-.col-lg-2 {
-  width: 16.66%;
-}
-.col-lg-3 {
-  width: 25%;
-}
-.col-lg-4 {
-  width: 33.33%;
-}
+  }
+  .col-lg-1 {
+    width: 8.33%;
+  }
+  .col-lg-2 {
+    width: 16.66%;
+  }
+  .col-lg-3 {
+    width: 25%;
+  }
+  .col-lg-4 {
+    width: 33.33%;
+  }
   .col-lg-5 {
     width: 41.66%;
   }
